# DistroMaps

./: .env.example  .gitignore  API_DOCS.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  README.md  docker-compose.yml  package-lock.json  package.json  plan.md  pyproject.toml  rewrite_plan.js  setup.md  tsconfig.json  ultracode_workflow.js  vercel.json  vercel.json.backup  vercel.react.json  vite.config.ts
.claude/: settings.local.json
.mimocode/plans/: 1784696713075-playful-comet.md
api/: [...all].ts
app/: package-lock.json  package.json
app/src/app/: globals.css  (+2 more)
backend-api/: Dockerfile  package-lock.json  package.json
backend-api/db/: init.sql
backend-api/src/: db.ts  index.ts  migrate.ts  routes.ts
backend-data/: Dockerfile  requirements.txt
backend-data/scrapers/: __init__.py  items.py  pipelines.py  settings.py
backend-data/workers/: __init__.py  ai_processor.py
data/: crawl-results.json  discoveries.json  distros.json  source-trust.json
frontend/: index.html
frontend-vue/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend-vue/public/: data.json
frontend-vue/src/: App.vue  style.css
frontend/api/: [...all].ts  _handler.ts
frontend/server/: dev-api.ts
frontend/src/: App.tsx  hooks.ts  main.tsx
rl/: __init__.py  config.py  reward_functions.py
rl/workers/: __init__.py  actor_worker.py  policy_worker.py  reward_worker.py
scripts/: autonomous-crawler.ts  build-data.ts  cleanup-data.ts  discover-distros.ts  expand-data-batch2.ts  expand-data-batch3.ts  expand-data.ts  expand-distros-2.ts  expand-distros-3.ts  expand-distros.ts  generate-distros.py  validate-data.ts
shared/: api-handlers.ts  types.ts
(+53 files in other folders)
